# discord-video-stream-py

./: .gitignore  CHANGELOG.md  README.md  discord-video-stream-py-plan.md  pyproject.toml
.github/workflows/: ci.yml  download-binaries.yml  publish.yml
discord_video_stream/: __init__.py  _bootstrap.py  enums.py  streamer.py
discord_video_stream/codecs/: __init__.py  h264.py  h264_rest.py  opus.py  vp8.py
discord_video_stream/media/: __init__.py  ffmpeg.py  player.py  ytdlp.py
discord_video_stream/utils/: __init__.py  binaries.py  ssrc.py
discord_video_stream/voice/: __init__.py  client.py  encryption.py  gateway.py  rtp.py  udp.py
docs/: getting-started.md
examples/: bot_token_example.py  movie_bot.py  stream_file.py
scripts/: download_binaries.py
tests/: test_encryption.py  test_ffmpeg.py  test_gateway.py  test_h264_packetizer.py  test_opus.py  test_rtp.py  test_ssrc.py  test_streamer.py  test_vp8_packetizer.py  test_ytdlp.py
