[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-video-stream-py"
version = "0.1.0"
description = "Stream video and audio into Discord voice channels (Go Live / webcam) using Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["discord", "video", "streaming", "voice", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "discord.py-self>=2.0",
    "PyNaCl>=1.5",
    "cryptography>=41.0",
    "yt-dlp>=2024.1.0",
    "ffmpeg-python>=0.2.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/subhobhai943/discord-video-stream-py"
Repository = "https://github.com/subhobhai943/discord-video-stream-py"
Issues = "https://github.com/subhobhai943/discord-video-stream-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["discord_video_stream"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
