[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-video-stream-py"
version = "0.1.1"
description = "Stream video and audio into Discord voice channels (Go Live / webcam) using Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["discord", "video", "streaming", "voice", "bot", "ffmpeg", "rtp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "discord.py-self>=2.0",
    "PyNaCl>=1.5",
    "cryptography>=41.0",
    "yt-dlp>=2024.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.12",
]

[project.scripts]
dvs-download-binaries = "discord_video_stream._bootstrap:ensure_binaries"

[project.urls]
Homepage = "https://github.com/subhobhai943/discord-video-stream-py"
Repository = "https://github.com/subhobhai943/discord-video-stream-py"
Issues = "https://github.com/subhobhai943/discord-video-stream-py/issues"
Changelog = "https://github.com/subhobhai943/discord-video-stream-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["discord_video_stream"]
exclude = [
    "discord_video_stream/bin",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
